traduction de Our Final Version: Supporting SQL Queries

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "All is well."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,51 +364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "********************************************************************\n",
-      "\n",
-      "  ERROR: Uh oh...\n",
-      "\n",
-      "********************************************************************\n",
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "errorString: String = \n"
+       "Name: java.lang.RuntimeException\n",
+       "Message: Uh oh...\n",
+       "StackTrace: java.lang.RuntimeException: Uh oh...\n",
+       "  at scala.sys.package$.error(package.scala:27)\n",
+       "  at scala.Predef$.error(Predef.scala:144)"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"\n",
-       "********************************************************************\n",
-       "  ERROR: Uh oh...\n",
-       "********************************************************************\n",
-       "\"\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "errorString: String = \n"
-      ]
-     },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2191,37 +2160,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Our Final Version: Supporting SQL Queries\n",
-    "To play with some more Spark, let's write SQL queries to explore the resulting data. \n",
+    "## Notre version finale : support des requêtes SQL\n",
+    "Pour jouer un peu plus avec Spark, écrivons des requêtes SQL pour explorer les données résultantes.\n",
     "\n",
-    "To do this, let's first refine the output. Instead of creating a string for the list of `(location,count)` pairs, which is opaque to our SQL schema (i.e., just a string), let's \"unzip\" the collection into two arrays, one for the `locations` and one for the `counts`. That way, if we ask for the first element of each array, we'll have nicely separate fields that work better with Spark SQL queries.\n",
+    "Pour faire ça, affinons d'abord la sortie. Au lieu de créer une chaîne de caractères pour la liste de couples `(location,count)`, qui est opaque pour notre schéma SQL (ie. juste une chaîne de caractères), \"dézippons\" la collection en deux tableaux, un pour les `locations` et un pour les `counts`. De cette manière, si nous accèdons au premier élément de chaque tableau, nous aurons des champs séparés qui fonctionneront bien mieux avec les requêtes Spark SQL.\n",
     "\n",
-    "\"Zipping\" and \"unzipping\" work like a mechanical zipper. If I have a collection of tuples, say `List[(String, Int)]`, I convert this single collection of \"zippered\" values into two collections (in a tuple) of single values, `(List[String], List[Int])`. Zipping is the inverse operation.\n",
+    "\"Zipper\" et \"dézipper\" fonctionnent comme pour une fermeture éclair. Si j'ai une collection de tuples, comme `List[(String, Int)]`, je convertis cette seule collection de valeurs \"zippées\" dans deux collections (dans un tuple) de valeurs simples, `(List[String], List[Int])`. Zipper est l'opération inverse.\n",
     "\n",
-    "Here is our final implementation, `ii1` rewritten with this change."
+    "Voici notre implémentation finale, `ii1` réécrit avec ce changement."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ii = MapPartitionsRDD[54] at map at <console>:55\n"
+       "Name: Unknown Error\n",
+       "Message: lastException: Throwable = null\n",
+       "<console>:27: error: not found: value shakespeare\n",
+       "val ii = sc.wholeTextFiles(shakespeare.toString).\n",
+       "                           ^\n",
+       "<console>:30: error: value split is not a member of Any\n",
+       "            val words = contents.split(\"\"\"\\W+\"\"\").\n",
+       "                                 ^\n",
+       "<console>:32: error: value split is not a member of Any\n",
+       "            val fileName = location.split(pathSeparator).last\n",
+       "                                    ^\n",
+       "<console>:32: error: not found: value pathSeparator\n",
+       "            val fileName = location.split(pathSeparator).last\n",
+       "                                          ^\n",
+       "<console>:40: error: not found: value ascending\n",
+       "    sortByKey(ascending = true).\n",
+       "              ^\n",
+       "<console>:44: error: value toVector is not a member of Any\n",
+       "        val vect = iterable.toVector.sortBy {\n",
+       "                            ^\n",
+       "<console>:45: error: value unary_- is not a member of Any\n",
+       "            case (fileName, count) => (-count, fileName)\n",
+       "                                       ^\n",
+       "<console>:57: error: value reduceLeft is not a member of Any\n",
+       "        val totalCount = counts.reduceLeft((n1,n2) => n1+n2)\n",
+       "                                ^\n",
+       "\n",
+       "StackTrace: "
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "MapPartitionsRDD[54] at map at <console>:55"
-      ]
-     },
-     "execution_count": 43,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2267,7 +2254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We've changed the ending `mapValues` call to a `map` call, because we'll construct entirely new records, not just new values with the same keys. Hence the full records, two-element tuples are passed in, rather than just the values, so we'll pattern match on the tuple:\n",
+    "Nous avons changé l'appel `mapValues` final par un appel `map`, parce que nous allons construire entièrement de nouveaux enregistrements, pas juste de nouvelles valeurs avec les mêmes clés. D'où les enregistrements complets, des tupes de deux éléments sont passés plutôt que juste des valeurs. Ainsi nous pouvons utiliser le pattern matching sur le tuple:\n",
     "\n",
     "\n",
     "```scala\n",
@@ -2279,17 +2266,16 @@
     "        }\n",
     "```\n",
     "\n",
+    "Nous avons un `Vector[(String, Int)]` de tuples de deux éléments `(fileName, count)`. Nous utilisons `Vector.unzip` pour créer un seul tuple de deux éléments (où chaque élément est maintenant une collection) : une pour la position et une pour les décomptes. Le type est `(Vector[String], Vector[Int])`.\n",
     "\n",
-    "We have a `Vector[String, Int]` of two-element tuples `(fileName, count)`. We use `Vector.unzip` to create a single, two element tuple, where each element is now a collection, one for the locations and one for the counts. The type is `(Vector[String], Vector[Int])`.\n",
-    "\n",
-    "We can also use pattern matching with assignment! We immediately decompose the two-element tuple:\n",
+    "Nous pouvons aussi utiliser le pattern matching avec les assignation ! Dans ce cas, nous décomposons immédiatement le tuple :\n",
     "\n",
     "```scala\n",
     "        // I use pattern matching to extract these two collections into variables.\n",
     "        val (locations, counts) = vect.unzip  \n",
     "```\n",
     "\n",
-    "Finally, it's convenient to know how many locations and counts we have, so we'll compute another new column for the their count and format a four-element tuple as the final output.\n",
+    "Finalement, il est pratique de connaître combien de positions et de décomptes est-ce que nous avons. Nous allons donc calculer dans une nouvelle colonne pour le décompte et nous formaterons un tuple de 4 éléments en sortie.\n",
     "\n",
     "```scala\n",
     "        // Lastly, I'll compute the total count across all locations and return \n",
@@ -2307,11 +2293,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay! Now let's create a [DataFrame](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) with this data. The `toDF` method just returns the same `DataFrame`, but with appropriate names for the columns, instead of the synthesized names that `createDataFrame` generates (e.g., `_c1`, `_c2`, etc.)\n",
+    "OK ! Maintenant, créons un [DataFrame](http://spark.apache.org/docs/latest/api/scala/index.html#org.apache.spark.sql.DataFrame) avec cette donnée. La méthode `toDF` retourne simplement le même `DataFrame`, mais avec les noms de colonne appropriés, au lieu de noms générés automatiquement par `createDataFrame` (eg. `_c1`, `_c2`, etc.)\n",
     "\n",
-    "Caching the `DataFrame` in memory prevents Spark from recomputing `ii` from the input files _every time_ I write a query!\n",
+    "Mettre le `DataFrame` en cache dans la mémoire évite à Spark de recalculer `ii` avec les fichiers en entrée _chaque fois_ j'écris une requête !\n",
     "\n",
-    "Finally, to use SQL, I need to \"register\" a temporary table."
+    "Enfin, pour utiliser SQL, j'ai besoin \"d'enregistrer\" une table temporaire."
    ]
   },
   {
@@ -2358,7 +2344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's remind ourselves of the schema:"
+    "Revoyons le schéma:"
    ]
   },
   {
@@ -2389,7 +2375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following SQL query extracts the top location by count for each word, as well as the total count across all locations for the word. The Spark SQL dialect supports Hive SQL syntax for extracting elements from arrays, maps, and structs ([details](https://cwiki.apache.org/confluence/display/Hive/LanguageManual+UDF#LanguageManualUDF-CollectionFunctions)). Here I access the first element (index zero) from each array. "
+    "La requête SQL ci-dessous extrait la première position par décompte pour chaque mot et aussi le décompte total sur toutes les positions pour le mot. Le dialecte Spark SQL supporte la syntaxe Hive SQL pour extraire les éléments depuis des _arrays_, des _maps_ et des _structs_ ([détailles](https://cwiki.apache.org/confluence/display/Hive/LanguageManual+UDF#LanguageManualUDF-CollectionFunctions)). Ici, j'accède au premier élément (indice zéro) de chaque _array_."
    ]
   },
   {
@@ -2442,12 +2428,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Unfortunately, the output formatting for the `%%SQL` \"cell magic\" is not configurable. The `%%DataFrame` magic handles variable width layout and also provides more display options. First, to see its options:"
+    "Malheureusement, le formattage de sortie pour les \"cellules magiques\" `%%SQL` n'est pas configurable. Le `%%DataFrame` magique supporte les mise en page de largeur variable et fournit aussi plus d'option d'affichage. Voyons tout d'abord ces options:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -2466,7 +2452,7 @@
        "            json (default: html)            \n"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2479,7 +2465,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now here's the previous query again, with the a `WHERE` clause added for good measure:"
+    "Maintenant, voici la requête précédente à nouveau avec une clause `WHERE` en plus:"
    ]
   },
   {
@@ -2519,7 +2505,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now use the `%%dataframe` _magic_."
+    "Et avec le `%%dataframe` _magique_."
    ]
   },
   {
@@ -2547,16 +2533,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A _natural language processing_ (NLP) expert might tell you that _love_, _loved_, _loves_, etc. are really the same word, because they are different conjugations of the verb _to love_ and _love_ is a noun, too. Similarly, should _gloves_ (plural) and _glove_ (singular) be handled differently?\n",
+    "Un export du _traitement langage naturel_ (_Naturel Language Processing_ - NLP) pourrait vous expliquer que _love_, _loved_, _loves_, etc. représentent le même mot, parce qu'il s'agit de différents conjugaison du verbre _to love_ et _love_ est un nom aussi. De la même manière, est-ce _gloves_ (pluriel) et _glove_ (singulier) devraient être traités différemment ?\n",
     "\n",
-    "What we really should do is extract the _stems_ of these words and use those instead. NLP toolkits handle this _stemming_ for you."
+    "Ce que nous devons vraiment faire, c'est d'extraire le _radical_ de ces mots et de les utiliser. Les outils de NLP permettent d'extraire cette recherche du radical pour vous."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's also a useful `show` method on `DataFrames`."
+    "Il ya une méthode utile appelée `show` sur les `DataFrame`."
    ]
   },
   {
@@ -2605,7 +2591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default, it truncates column widths and only prints 20 rows. You can override both:"
+    "Par défaut, elle tronque les colonnes larges et n'affiche que 20 lignes. Vous pouvez modifier ces paramètres :"
    ]
   },
   {
@@ -2655,22 +2641,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:** Named Parameters\n",
+    "> **Note :** Paramètres nommés\n",
     "\n",
-    "> I used _named parameters_ here, `show(numRows = 40, truncate = false)`, for legibility. They are optional in Scala, as long as you pass the values in the same order as the parameters are declared. You can also use named parameters to write the arguments in any order you want, not just declaration order. So, I could have just written `(40, false)`, but then you would rightly wonder what `false` means in this context."
+    "> J'ai utilisé _paramètres nommés_ ici, `show(numRows = 40, truncate = false)`, pour la lisibilité. Ils sont optionnles en Scala, tant que vous passer les valeurs dans le même ordre que la déclaration des paramètres. Vous pouvez aussi utiliser des paramètres nommés pour écrire les arguments dans n'importe quel ordre souhaité, indépandamment de l'ordre de la déclaration. Ainsi, j'aurais pu écrire `(40, false)`, mais vous auriez légitimement demander ce que signifie `false` dans ce contexte."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercises:** \n",
+    "**Exercices :** \n",
     "\n",
-    "See the <a href=\"#ExerciseSolutions\">Appendix</a> for the solutions to the first two exercises.\n",
+    "Allez voir <a href=\"#ExerciseSolutions\">Appendix</a> pour les solutions au deux premiers exercices.\n",
     "\n",
-    "* The `glove`, `gloves`, `whate` and `whatever` aren't really the `love` and `hate` we wanted ;) How might you change the query so be more specific.\n",
-    "* Modify the query to return the top two locations and counts.\n",
-    "* Before moving on, try writing other queries. Edit the query in the following cell:"
+    "* `glove`, `gloves`, `whate` et `whatever` ne sont vraiment pas les `love` et `hate` que nous voulons ;) Comment pourriez-vous modifier la requête pour qu'elle soit plus spécifique ?\n",
+    "* Modifiez la requête pour retourner les deux premiers positions et décomptes.\n",
+    "* Avant d'aller plus loin, essayez d'écrire une autre requête. Éditez la requête dans la cellule suivante :"
    ]
   },
   {
@@ -2731,14 +2717,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Removing the \"Stop Words\"\n",
-    "Did you notice that one record we saw above was for the word \"a\". Not very useful if you're using this data for text searching, _sentiment mining_, etc. So called _stop words_, like _a_, _an_, _the_, _he_, _she_, _it_, etc., could also be removed.\n",
+    "#### Retirer les \"Stop Words\"\n",
+    "Avez-vous remarquez que l'un des enregistrement que nous avons vu ci-dessous était pour le mot \"a\" ? Ce n'est pas très utile si vous utilisez cette donnée pour de la recherche textuelle, pour de _l'extraction d'émotion_, etc. Les _stop words_ (ou _mots vides_) comme _a_, _an_, _the_, _he_, _she_, _it_, etc., peuvent aussi être retirés.\n",
     "\n",
-    "Recall the `filter` logic I added to remove \"\", `word => word.size > 0`. I could replace it with `word => keep(word)`, where `keep` is a method that does any additional filtering I want, like removing stop words.\n",
+    "Rappelez-vous de `filter` que j'ai ajouté pour retirer \"\", `word => word.size > 0`. Je pourrais le remplacer par `word => keep(word)`, où `keep` est une méthode qui réalise tous les filtrages additionnels que je veux, comme retirer les _stop words_.\n",
     "\n",
-    "**Exercise:**\n",
+    "**Exercice :**\n",
     "\n",
-    "* Implement the `keep(word: String):Boolean` method and change the `filter` function to use it. Have `keep` return `false` for a small, hard-coded list of stop words (make up your own list or search for one). (See the <a href=\"#ExerciseSolutions\">Appendix</a> for the solution.)"
+    "* Implémentez la méthode `keep(word: String):Boolean` et changez la fonction `filter` pour l'utiliser. `keep`devra retourner `false` pour une petite liste de _stop words_ hard codés (faites votre propoe liste ou cherchez en une). (Allez voir <a href=\"#ExerciseSolutions\">Appendix</a> pour la solution)."
    ]
   },
   {
