Traduction conclusion + annexe

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -4524,16 +4524,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Conclusions\n",
-    "I appreciate the effort you put into studying this notebook. I hope you enjoyed it as much as I enjoyed writing it. Please post issues on how I can improve it to the [GitHub repo](https://github.com/deanwampler/JustEnoughScalaForSpark). \n",
+    "# Conclusion\n",
     "\n",
-    "Now you know the core elements of Scala that you need for using the Spark Scala API. I hope you can appreciate the power and elegance of Scala. I hope you will choose to use it for all of your data engineering tasks, not just for Spark. \n",
+    "J'apprécie l'effort que vous avez fourni pour faire ce notebook. J'espère qu'il vous a plu autant que j'ai eu du plaisir à l'écrire. Si vous avez des suggestions d'améliorations, vous pouvez les poster dans le [repo GitHub](https://github.com/deanwampler/JustEnoughScalaForSpark).\n",
     "\n",
-    "What about data science? There are many people who use Scala for data science in Spark, but today Python and R have much richer libraries for Mathematics and Machine Learning. That will change over time, but for now, you'll need to decide which language best fits your needs.\n",
+    "Vous savez maintenant ce qu'il faut de Scala pour utiliser l'API Spark Scala. J'espère que vous pourrez apprécier la force et l'élégance de Scala. J'espère aussi que vous choisirez de l'utiliser pour toutes vos tâches de data ingénieur, pas juste pour Spark.\n",
     "\n",
-    "As you use Scala, there will be more things you'll want to understand that we haven't covered, including common idioms, conventions, and tools used in the Scala community. The references at the beginning of the notebook will give you the information you need.\n",
+    "Qu'en est-il de la data science ? Il y a beaucoup de personnes qui utilisent Scala pour la data science en Spark, mais aujourd'hui, Python et R ont de plus riches librairies pour les Mathématiques et le Machine Learning. Cela changera au cours du temps, mais pour l'instant, vous devrez décider quelle langage correspond le mieux à vos besoins.\n",
     "\n",
-    "Best wishes.\n",
+    "En utilisant Scala, il y aura plus de choses que vous voudrez comprendre que nous n'avons pas couvert, comme les idiomes communs, les conventions, et les outils utilisés dans la communauté Scala. Les références au début du notebook vous donneront les informations dont vous aurez besoin.\n",
+    "\n",
+    "Meilleurs voeux.\n",
     "\n",
     "[Dean Wampler, Ph.D.](mailto:deanwampler@gmail.com)<br/>\n",
     "[@deanwampler](http://twitter.com/deanwampler)"
@@ -4543,17 +4544,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Appendix: Exercise Solutions\n",
-    "<a name=\"ExerciseSolutions\"></a>\n",
-    "Let's discuss the solutions to exercises that weren't already solved earlier in the notebook."
+    "## Annexe : Solutions Exercices\n",
+    "<a name=\"Solutions aux exercices\"></a>\n",
+    "Voyons les solutions aux exercices qui n'ont pas été résolus tout à l'heure dans le notebook."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter for Plays that Have \"of\" in the Name\n",
-    "You can add the condition (comment `// <== here`) immediate after defining `play`. You could do it later, after either of the subsequent two expressions, but then you're doing needless computation. Change `true` to `false` to print plays that don't contain \"of\"."
+    "### Filtre pour les pièces de théâtres qui ont \"of\" dans leur nom\n",
+    "Vous pouvez ajouter une condition (commentaire `// <== here`) immédiatement après avoir défini `play`. Vous pourriez le faire plus tard, après l'une des deux expressions suivantes, mais vous feriez des calculs inutiles. Changez `true` à `false` pour afficher les pièces de théâtres qui ne contiennent pas \"of\"."
    ]
   },
   {
@@ -4607,8 +4608,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### More Specific \"Love\" and \"Hate\" Words\n",
-    "One reasonable choice to prevent seeing `glove`, `whatever`, etc. is to only find words that start with `love` and `have`. Let's also keep `unlove`:"
+    "### Des mots \"Love\" et \"Hate\" plus spécifiques\n",
+    "Un choix raisonnable pour éviter de voir `glove`, `whatever`, etc. est de trouver seulement les mots commençant par `love` et `hate`. Gardons aussi `unlove`:"
    ]
   },
   {
@@ -4674,8 +4675,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Return the Top Two Locations and Counts\n",
-    "We used the `DataFrame` API to write a SQL query that returned the top location and count. Adding the next one is straightforward. What do you observe is returned when there isn't a second location and count?"
+    "### Retourner les premières localisations et totaux\n",
+    "Nous utilisons l'API `DataFrame` pour écrire une requête SQL qui retourne les premières localisations et totaux. Ajouter le suivant est trivial. Que remarquez vous sur ce qui est retourné lorsqu'il n'y a pas de seconde localisation et total ?"
    ]
   },
   {
@@ -4760,23 +4761,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Removing Stop Words\n",
-    "Recall you were asked to implement a `keep(word: String):Boolean` method that filters stop words.\n",
+    "### Enlever les mots vides\n",
+    "Rappelez-vous qu'il vous a été demandé d'implémenter une méthode : `keep(word: String):Boolean` qui filtre les mots vides.\n",
     "\n",
-    "First, let's implement `keep`. You can find lists of stop words on the web. One such list for English can be found [here]( * From http://norm.al/2009/04/14/list-of-english-stop-words/). It includes many words that you might not consider stop words. Nevertheless, I'll just use a smaller list here.\n",
+    "Premièrement, implémentons `keep`. Vous pouvez trouver des listes de mots vides sur le net. Une de ces listes pour l'anglais peut être trouvée [ici]( * From http://norm.al/2009/04/14/list-of-english-stop-words/). Elle inclut plusieurs mots qui peuvent ne pas être considérés comme des mots vides. Néanmois, j'utiliserai juste une liste plus petite ici.\n",
     "\n",
-    "Note that I'll use a Scala [Set](http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.Set) to hold the stop words. We want _O(1)_ look-up performance. We just want to know if the word is in the set or not.\n",
+    "Notez que j'utiliserai un [Set](http://www.scala-lang.org/api/current/index.html#scala.collection.immutable.Set) de Scala pour contenir les mots vides. Nous voulons une performance de consultation en _0(1)_.  Nous voulons juste savoir si le mot est dans le set ou pas.\n",
     "\n",
-    "I'll also add \"\", so I can remove the explicit test for it.\n",
+    "J'ajouterai également \"\" pour enlever le test évident pour celui-ci.\n",
     "\n",
-    "Finally, we'll embed the whole thing in a new Scala `object`. This extra encapsulation is a way to work around occasional problems with \"task not serializable\" errors."
+    "FInalement, nous intégrerons tout cela dans un nouvel `object` Scala. Cette encapsulation en plus permet d'éviter des problèmes occasionnels avec des erreurs comme \"task not serializable\"."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**WARNING**: The definition in the next cell may trigger a `Task not serializable` error in the cell that follows, where it is used. Of so, this is \"quirk\" of the Scala interpreter running with the notebook environment. This code should work without issues in Spark applications that you write, i.e., that you compile into applications with `scalac`."
+    "**AVERTISSEMENT**: La définition de la prochaine cellule pourra déclencher une erreur `Task not serializable` dans la cellule qui suit où elle est utilisée. Si cela est le cas, c'est une anomalie de l'interpréteur Scala qui fonctionne avec l'environnement du notebook. Ce code devrait marcher sans problème dans les applications Spark que vous codez, c-à-d que vous compilez en applications avec `scalac`."
    ]
   },
   {
@@ -4913,11 +4914,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One last thing, we now have `filter(word => keep(word))`, but note how we used `println` in the previous cell to see results. We can do something similar with `filter` and instead write `filter(keep)`. \n",
+    "Une dernière chose, nous avons maintenant `filter(word => keep(word))`, mais notez comment nous utilisons `println` dans la cellule précédente pour afficher les résultats. Nous pouvons faire quelque chose de semblable avec `filter` et écrire à la place `filter(keep)`.\n",
     "\n",
-    "What does this mean exactly? It tells the compiler \"convert the _method_ `keep` to a _function_ and pass that to `filter`.\" This works because `keep` already does what `filter` wants, take a single string argument and return a boolean result.\n",
+    "Qu'est-ce que cela veut dire exactement ? Cela dit au compilateur de \"convertir la _méthode_ `keep` vers une _fonction_ et la passer dans `filter`.\" Cela fonctionne car `keep` fait déjà ce que `filter` veut : prendre une seule chaîne de caractère en argument et retourner un boolean.\n",
     "\n",
-    "Passing `keep` is actually different than passing `word => keep(word)`, which is an _anonymous_ function that _calls_ keep. We are using `keep` as the function itself, rather than constructing a function that uses `keep`."
+    "Passer directement `keep` est en fait différent de passer `word => keep(word)`, qui est une fonction _anonyme_ qui _appelle_ keep. Nous utilisons `keep` elle-même comme une fonction, au lieu de construire une fonction qui utilise `keep`."
    ]
   }
  ],
