Correction fautes ortho

--- a/notebook/CeQuilFautDeScalaPourSpark.ipynb
+++ b/notebook/CeQuilFautDeScalaPourSpark.ipynb
@@ -91,8 +91,8 @@
     "* [Lightbend Fast Data Platform](http://www.lightbend.com/fast-data-platform/): Notre nouvelle distribution pour la _Fast Data_ (stream processing), incluant Spark, Flink, Kafka, Akka Streams, Kafka Streams, HDFS, et notre outil de gestion de production et de monitoring, tournant sur Mesosphere DC/OS.\n",
     "\n",
     "Pour l'instant je vous recommande d'ouvrir la page du Scaladoc et de l'API Scala pour Spark. Vous pouvez y accéder en cliquant sur ces deux liens :\n",
-    "* Scaladocs for <a href=\"http://www.scala-lang.org/api/current/#package\" target=\"scala_scaladocs\">Scala</a>.\n",
-    "* Scaladocs for <a href=\"http://spark.apache.org/docs/latest/api/scala/index.html#package\" target=\"spark_scaladocs\">Spark</a>."
+    "* Scaladocs pour <a href=\"http://www.scala-lang.org/api/current/#package\" target=\"scala_scaladocs\">Scala</a>.\n",
+    "* Scaladocs pour <a href=\"http://spark.apache.org/docs/latest/api/scala/index.html#package\" target=\"spark_scaladocs\">Spark</a>."
    ]
   },
   {
@@ -100,7 +100,7 @@
    "metadata": {},
    "source": [
     "> **Astuce pour utiliser Scaladoc:**\n",
-    "* Utilisez la barre de recherche dans le corner en haut à gauche pour trouver un _type_ particulier. (Par exemple, essayez de trouver RDD) \n",
+    "* Utilisez la barre de recherche dans le coin en haut à gauche pour trouver un _type_ particulier. (Par exemple, essayez de trouver RDD) \n",
     "* Pour chercher une _méthode_ particulière, cliquez sur un caractère en dessous de la barre de recherche pour la première lettre de la méthode et scrollez y."
    ]
   },
@@ -137,14 +137,14 @@
     "\n",
     "> Pour le moment, sachez juste que vous pouvez cliquer dans n'importe quelle cellule pour changer de focus. Quand vous êtes dans une cellule, `shift+enter` évalue la cellule (parcourt la cellule et affiche le Markdown ou bien fait tourner le code), puis passe à la cellule suivante. Essayez cela pour quelques cellules.\n",
     "\n",
-    "Une fonctionnalité utile est de pouvoir éditer une cellule que vous avez lancé précedemment et la relancer. C'est très utile lorsque vous expérimentez avec votre code."
+    "Une fonctionnalité utile est de pouvoir éditer une cellule que vous avez lancé précédemment et la relancer. C'est très utile lorsque vous expérimentez avec votre code."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### L'environment\n",
+    "### L'environnement\n",
     "Configurons l'environnement pour qu'il nous montre toujours les types des expressions."
    ]
   },
@@ -225,7 +225,7 @@
    "metadata": {},
    "source": [
     "## Chargeons des données (et commençons à apprendre le Scala)\n",
-    "Nous allons écrire de vrai programmes Spark et les utiliser pour apprendre Scala et Spark en même temps. \n",
+    "Nous allons écrire de vrais programmes Spark et les utiliser pour apprendre Scala et Spark en même temps. \n",
     "\n",
     "Mais tout d'abord, nous allons avoir besoin d'utiliser quelques fichiers texte qui contiennent des pièces de Shakespeare. Les prochaines cellules définissent des méthodes helper pour configurer le tout. Nous apprendrons des concepts Scala à la volée."
    ]
@@ -236,7 +236,7 @@
    "source": [
     "> **Note:** \"méthode\" vs. \"fonction\"\n",
     "\n",
-    "> Scala utilise une convention commune provenant l'orienté objet, où le terme _méthode_ est utilisé pour une fonction qui est attachée à une classe ou instance. Contrairement à Java, tout du moins avant Java 8, Scala possède aussi des _fonctions_ qui ne sont pas associés à une classe ou instance particulière.\n",
+    "> Scala utilise une convention commune provenant de l'orienté objet, où le terme _méthode_ est utilisé pour une fonction qui est attachée à une classe ou instance. Contrairement à Java, tout du moins avant Java 8, Scala possède aussi des _fonctions_ qui ne sont pas associés à une classe ou instance particulière.\n",
     "\n",
     "> Dans notre prochain exemple de code, nous définissons plusieurs _méthodes_ helper pour afficher des informations, mais vous ne verrez pas de définition de classe ici. Ainsi, quelle est la classe associée à ces méthodes ? Quand vous utilisez Scala dans un notebook, vous utilisez en fait l'interpréteur Scala, qui prend chaque expression et définition que nous avons écrit et les met dans une classe cachée. L'interpréteur fait cela pour générer du byte code valide pour la JVM.\n",
     "\n",
